[package]
name = "axum-errors-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0.62", features = ["std"] }
tower = { version = "0.4.13", features = ["full"] }

